correction on mobile nav a::before and :hover

--- a/css/style.css
+++ b/css/style.css
@@ -308,36 +308,39 @@ nav a:hover {
     margin-bottom: 2em;
 }
 
-nav{
+nav {
     display: block;
     padding-top: 2em;
     width: 100%;
 }
 
-nav .sub-nav{
+nav .sub-nav {
     width: 100%;
     display: flex;
 }
 
-nav .sub-nav a{
+nav .sub-nav a {
     width: 100%;
     text-align: center;
-    border-bottom: 3px solid lightgray;
-}
-
-nav a {
-    padding-right: 2em;
     padding-bottom: 0.6250em;
 }
-nav a:hover{
-    border-bottom: 3px solid #0065FC;
-    border-top: 0;
+
+ nav a::before {
+    top: auto;
+    bottom:-3px; 
+    width: 100%; 
+    background-color: lightgray; 
+    transition: background-color 0.3s ease;
+}
+
+nav a:hover::before {
+    width: 100%;
+}
+
+nav a:hover {
     color: #0065FC;
 }
-nav a:hover::before {
-    background-color: transparent;
-    width: 0;
-}
+
 .headline {
     padding: 1em;
 }
